"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-08-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54-prsim-07-01:
	  This branch is for another series of prsim improvements.  
	  Some plans are written in the TODO file.
	  In this revision, only committed old PRSIM_ALLOW_UNSTABLE_DEQUEUE
		and PRSIM_FIX_BOGUS_INTERFERENCE flags.  


2006-08-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-54:
	  Added LVS spec directive 'cross_coupled_inverters'.
	  Added some base cflat lvs test cases.  


2006-08-07	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-53:
	  No *real* source revision.  
	  TODO: wish for unroll_references_sloppy (not packed)
	  s/unroll_references/unroll_references_packed/g for clarity.  
	  lib: fixed acknowledge of inactive_reset_bitbucket_a
	  test/lib: added source-sink pair stability tests.
	  prsim: checkpointing now omits cause_rule because rule/expr IDs
		are optimization-sensitive.  Cause-rules are only needed
		for determining delays for queue scheduling anyhow.  


	* HACKT-00-01-04-main-00-79-52:
	  prsim: fixed minor 'getall' bug, now allow references to
		arrays, even with underspecified dimensions, which will
		collect all instances matching hierarchical prefix, 
		and need not be dense.  Implemented
		simple_meta_..._reference::lookup_globally_allocated_indices.


	* HACKT-00-01-04-main-00-79-51:
	  No source revision.
	  Updated config substitution script to work with autoconf-2.60.
	  Now autoconf-2.60 is supported and bootstraps correctly. 


2006-08-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-50:
	  Reverted earlier patch for bison-2.1, deduced that none is needed
		and that any perceived breakage was caused by autoconf-2.60.
	  Bison-2.1 is now supported, but autoconf-2.60 is still in jail.  

