@@ -3,6 +3,17 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "main/version.cc".
 
+2006-08-10	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-79-54-prsim-07-02:
+	  prsim: devel-switch: PRSIM_FINE_GRAIN_ERROR_CONTROL added:
+		be able to control whether or not diagnostic is printed
+		and whether or not to break runs for each type of 
+		violation {weak-,}{unstable,interference}.
+		Current snapshot causes no regressions with/without switch.
+	  TODO next: commands to alter behavior.
+
+
 2006-08-09	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-79-54-prsim-07-01:
